--- a/BooksLibrary/Views/BooksList/Index.cshtml
+++ b/BooksLibrary/Views/BooksList/Index.cshtml
@@ -9,8 +9,8 @@
         <col span="1" style="width: 10%;" />
         <col span="1" style="width: 10%;" />
         <col span="1" style="width: 10%;" />
-        <col span="1" style="width: 52%;" />
-        <col span="1" style="width: 15%;" />
+        <col span="1" style="width: 57%;" />
+        <col span="1" style="width: 10%;" />
     </colgroup>
     <thead>
         <tr>
@@ -34,9 +34,13 @@
                 <td>@book.Description</td>
                 <td>
                     <div class="row">
-                        <a asp-controller="BooksList" asp-action="Reserve" asp-route-id="@book.Id" role="button" class="btn btn-primary mr-1" title="Reserve"><i class="fas fa-book"></i></a>
-                        <a asp-controller="BooksList" asp-action="Edit" asp-route-id="@book.Id" role="button" class="btn btn-warning mr-1" title="Edit"><i class="fas fa-edit"></i></a>
-                        <a asp-controller="BooksList" asp-action="Delete" asp-route-id="@book.Id" role="button" class="btn btn-danger mr-1" title="Delete"><i class="fas fa-trash"></i></a>
+                        <a asp-controller="BooksList" asp-action="Reservations" asp-route-id="@book.Id" role="button" class="btn btn-info m-1" title="Reservations"><i class="fas fa-clipboard-list"></i></a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a asp-controller="BooksList" asp-action="Reserve" asp-route-id="@book.Id" role="button" class="btn btn-primary m-1" title="Reserve"><i class="fas fa-book"></i></a>
+                        }
+                        <a asp-controller="BooksList" asp-action="Edit" asp-route-id="@book.Id" role="button" class="btn btn-warning m-1" title="Edit"><i class="fas fa-edit"></i></a>
+                        <a asp-controller="BooksList" asp-action="Delete" asp-route-id="@book.Id" role="button" class="btn btn-danger m-1" title="Delete"><i class="fas fa-trash"></i></a>
                     </div>
                 </td>
             </tr>
